# GLADtoText

./: .gitignore  ARCHITECTURE.md  CHALLENGES_AND_GAPS.md  CMakeLists.txt  COMPACT_MODELS.md  COMPLETE_EXAMPLE_SUMMARY.md  COMPLETE_SOLUTION.md  CONTRIBUTING.md  FINAL_SUMMARY.md  GETTING_STARTED.md  GITHUB_INSTALL_FIX.md  GUIDE.md  INDEX.md  INSTALL_WORKAROUND.md  INTENT_CLASSIFICATION_EXAMPLE.md  MANIFEST.in  Makefile  NEXT_STEPS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  PYTHON_GUIDE.md  PYTHON_INSTALLATION.md  PYTHON_INSTALL_STATUS.md  PYTHON_PACKAGE_SUMMARY.md  PYTHON_PACKAGING_ASSESSMENT.md  PYTHON_QUICK_REFERENCE.md  QUICK_REFERENCE.md  README.md  README_COMPACT.md  ROADMAP.md  SENTENCE_ENCODING.md  SENTENCE_ENCODING_SUMMARY.md  STRESS_TEST_FIXES_SUMMARY.md  TINY_MODELS.md  TRANSFER_LEARNING.md  build_and_test.sh  colab_setup.ipynb  compact_infer.cpp  (+22 more)
core/: config.h  dictionary.h  matrix.h  model_config.h  sparse_matrix.h  vector.h
core/classifier/: linear_classifier.h
core/config/: model_config.cc
core/embedding/: embedding_table.cc
core/encoder/: mean_sentence_encoder.h  word_encoder.h
core/loss/: softmax.h
core/ngram/: ngram_generator.h
core/tokenizer/: english_tokenizer.h
core/training/: simple_trainer.cc
core/utils/: aligned_alloc.cc
docs/: COMPREHENSIVE_TEST_SUITE.md  LARGE_SCALE_TEST_COMPLETION.md  README.md  ROADMAP.md  STATUS.md  STRESS_TEST_SUITE.md
examples/: README.md  demo_compact.sh  example_intent_classification.sh  test_transfer_learning.sh
heads/: classify.h  semantic.h
model/: attention.h  backbone.h  embeddings.h  memory.h  sentence_encoder.h  tiny_embeddings.h
python/: README.md  correct_workflow.py  example_usage.py
revisit/: example_usage.cc
revisit/core/classifier/: linear_classifier.cc
revisit/core/config/: model_config.h
revisit/core/embedding/: embedding_table.h
revisit/core/encoder/: mean_sentence_encoder.cc  word_encoder.cc
revisit/core/hashing/: hash_function.h
revisit/tests/: test_edge_cases.cc  test_linear_classifier.cc  test_model_config.cc  test_ngram.cc  test_phonetic_encoder.cc  test_rng.cc  test_tokenizer.cc  test_training_determinism.cc
subwords/: char_ngram.h  grammar_units.h  phonetic.h
tests/: README.md  test_backbone.cpp  test_char_ngrams.cpp  test_dictionary.cpp  test_embedding.cc  test_grammar.cpp  test_grammar2.cpp  test_hash.cc  test_integration.cc  test_mean_sentence_encoder.cc  test_memory.cpp  test_softmax.cc  test_supervised.cpp  test_training_overfit.cc  test_unsupervised.cpp  test_unsupervised_debug.cpp  test_word_encoder.cc  text_char_ngrams  text_char_ngrams.cpp
tests/comprehensive/: README.md  TEST_SUITE_SUMMARY.md  run_all_tests.sh  test_intent_classification.sh  test_sentiment_classification.sh  test_topic_classification.sh
tests/data/: edge_cases.txt  intent_classification.txt  intent_validation.txt  large_scale_train.txt  large_scale_validation.txt  sentiment_large.txt  sentiment_validation.txt  topic_classification.txt  topic_validation.txt
tests/integration/: test_full_pipeline.sh  test_sentence_encoding.sh  test_transfer_learning.sh
tests/stress/: FILES_CHANGED.txt  FIXES_APPLIED.md  QUICK_START.md  README.md  cleanup.sh  diagnose_test4.sh  run_diagnostics_and_cleanup.sh  run_stress_tests.sh  test_edge_cases.sh  test_large_scale.sh  test_robustness.sh  test_stress.sh
tests/unit/: t1  t2  t3  t4  t5  test_backbone.cpp  test_char_ngrams.cpp  test_dictionary.cpp  test_grammar.cpp  test_grammar2.cpp  test_memory.cpp  test_supervised.cpp  test_unsupervised.cpp  test_unsupervised_debug.cpp
training/: supervised.cpp  unsupervised.cpp
(+8 files in other folders)
