[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gladtotext"
version = "0.1.0"
description = "FastText-inspired text embeddings with sentence-level encoding"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "GLADtoTEXT Contributors"}
]
keywords = ["nlp", "embeddings", "text-classification", "fasttext", "sentence-encoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "build>=0.7.0",
    "twine>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/GLADtoTEXT"
Documentation = "https://github.com/yourusername/GLADtoTEXT#readme"
Repository = "https://github.com/yourusername/GLADtoTEXT"
"Bug Tracker" = "https://github.com/yourusername/GLADtoTEXT/issues"
